js/js.translator/testData/incremental/invalidation/addMethodToInterfaceWithConsumer/main/impl.1.kt
import sample.I

class Impl : I {
    override fun foo(): Int = 42
    override fun baz(): Int = 1
}
